--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         </div>
       </div>
       <div class="right">
+        <div class="pop">
+          <p><strong>185</strong> GB Left</p>
+        </div>
         <div class="contain">
           <p class="storage">You’ve used <strong>815 GB</strong> of your storage</p>
           <div class="wrap">
@@ -49,7 +52,7 @@
   </div>
   
 
-  185 GB Left
+  
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
